...
                    systemImage: resultsViewModel.getResultIcon(gameStat: gameStat),
                    coordinate: gameStat.landmark.locationCoordinate
                )
                .tint(resultsViewModel.getResultColor(gameStat: gameStat))
            }
        }
        .accessibilityIdentifier("customMapViewMap")
        .safeAreaInset(edge: .bottom) {
            // Specific Location/Game informations on click
            HStack {
                Spacer()
                VStack(spacing: 0) {
                    if let selection {
...
